--- a/WebContent/pages/filebrowser.xhtml
+++ b/WebContent/pages/filebrowser.xhtml
@@ -17,10 +17,10 @@
 				style="font-weight:bold" />
 			<p:inputText id="fileInput"
 				value="#{fileBrowserBean.mostRecentFilePath}" />
-			<p:commandButton value="Submit" update="filePathValid"
+			<p:commandButton value="Submit" update="filePaths"
 				icon="ui-icon-check" />
-			<h:outputText id="filePathValid"
-				value="#{fileBrowserBean.mostRecentFilePath}" />
+			<h:outputText id="filePaths"
+				value="#{fileBrowserBean.getFilePaths()}" />
 		</h:panelGrid>
 	</h:form>
 	
